# sigmaepsilon.math

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  __pyproject.toml  export.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_pytest_cov.sh  run_pytest_cov_nojit.sh  setup.py
.circleci/: config.yml
.github/workflows/: jekyll-gh-pages.yml  static.yml
.math-pub/: pyvenv.cfg
.math-pub/Scripts/: activate  activate.bat  numba  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py  sphx_glr_python_to_jupyter.py
apps/llm_optimizer/: problem_1.md  problem_1.tex  solution_with_langchain.ipynb  solution_without_langchain.ipynb
docs/: requirements.txt
docs/source/: api.rst  api_approx.rst  api_linalg.rst  conf.py  development.rst  doc_utils.py  examples_gallery.rst  features.md  getting_started.rst  global_refs.rst  highlights.rst  index.rst  license.rst  notebooks.rst  references.bib  user_guide.md  user_guide.rst
docs/source/_notebooks/: approx1d.nblink  vectors.nblink
docs/source/_static/: custom.css  definition_box.css
docs/source/api/: api_approx.interpolation.rst  api_approx.regression.rst  api_approx.rst  api_function.rst  api_ga.rst  api_graph.graph.rst  api_graph.routines.rst  api_graph.rst  api_linalg.array.rst  api_linalg.frame.rst  api_linalg.model.rst  api_linalg.routines.rst  api_linalg.rst  api_linalg.tensor.rst  api_linalg.vector.rst  api_lp.rst  api_optimization.lp.rst  api_optimization.nlp.rst  api_optimization.rst
docs/source/developer_guide/: documenting.rst  installation.rst  testing.rst
docs/source/examples/: lagrange_1d.ipynb  mls.ipynb  (+10 more)
examples/: plot_0_mls.py  plot_1_lagrange_1d.py
notebooks/: function.ipynb  genetic.ipynb  lpp.ipynb  vector_algebra.ipynb
tests/: conftest.py  test_approx.py  test_docstrings.py  test_function.py  test_functions.py  test_ga.py  test_ga_error_handling.py  test_ga_max_iterations_status.py  test_graph.py  test_knn.py  test_logical.py  test_lp_gt_lt_constraints.py  test_lp_integrality_infer.py  test_lpp.py  test_mls_1d.py  test_mls_3d.py  test_mls_approximator.py  test_numint.py  test_utils.py
tests/linalg/: test_inverse.py  test_linalg.py  test_logical.py  test_rank.py  test_tensor2x3.py  test_tensor4x3.py
(+99 files in other folders)
