[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sigmaepsilon.math"
version = "2.2.0"
description = "A Python Library for Applied Mathematics in Physical Sciences."
classifiers=[  # https://pypi.org/classifiers/
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3 :: Only",
        "Operating System :: OS Independent",
]
readme = "README.md"
authors = ["Bence Balogh <bencebalogh@sigmaepsilon.com>"]
maintainers = ["Bence Balogh <bencebalogh@sigmaepsilon.com>"]
license = "MIT"
keywords = [
    "engineering", "mathematics", "optimization", "vector", "tensor",
    "vector algebra", "tensor algebra", "symbolic mathematics",
    "nonlinear optimization"
]
homepage = "https://github.com/sigma-epsilon/sigmaepsilon.math"
repository = "https://github.com/sigma-epsilon/sigmaepsilon.math"
documentation = "https://sigmaepsilonmath.readthedocs.io/en/latest/?badge=latest"
packages = [{ include = "sigmaepsilon", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
sigmaepsilon-core = ">=1.2.1"
sigmaepsilon-deepdict = ">=1.2.4"
numba = ">=0.56.4"
numpy = "^1.26.4"
scipy = "^1.12.0"
awkward = ">2.0.8"
sympy = ">=1.11.1"
pydantic = ">=2.0.2"

# packages pinned for vulnerability reasons
zipp = ">=3.19.1"  

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
black = "^24.2.0"
ipython = "^8.21.0"
poetry-plugin-export = "^1.6.0"
pre-commit = "^3.6.1"
matplotlib = "^3.9.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
networkx = "^3.2.1"
flake8 = "^7.0.0"
coverage = "^7.4.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"

[tool.poetry.group.docs.dependencies]
ipython = "^8.21.0"
myst-parser = "^2.0.0"
nbsphinx = "^0.9.3"
sphinx-gallery = "^0.15.0"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-bibtex = "^2.6.2"
nbsphinx-link = "^1.3.0"
sphinxcontrib-svg2pdfconverter = "^1.2.2"
sphinx-design = "^0.5.0"
sphinx-inline-tabs = "^2023.4.21"
pydata-sphinx-theme = "^0.15.2"
networkx = "^3.2.1"
plotly = "^5.19.0"
matplotlib = "^3.9.2"
